--- a/blog/2025-05-26-ai-deployment-operational-oversight.mdx
+++ b/blog/2025-05-26-ai-deployment-operational-oversight.mdx
@@ -2,17 +2,7 @@
 slug: ai-deployment-operational-oversight
 title: Deploying AI without operational oversight is like sending athletes to compete with no coach
 authors: [alain-prasquier]
-tags:
-  [
-    AI,
-    EnterpriseAutomation,
-    AIOrchestration,
-    Supervaize,
-    AIOps,
-    B2BTech,
-    FutureOfWork,
-    ComplianceByDesign,
-  ]
+tags: [agentic, supervaize]
 ---
 
 [LinkedIn Original Post](https://www.linkedin.com/company/107281688/admin/page-posts/published/)
