Update justfile to include build command, fix slug paths in documentation, and enhance CSS styles for links and headings.

--- a/docs/supervaize-fleet/setup-development-environment.mdx
+++ b/docs/supervaize-fleet/setup-development-environment.mdx
@@ -2,7 +2,7 @@
 id: developer-account
 title: Set up your Supervaize developer account
 displayed_sidebar: supervaizeFleetSidebar
-slug: fleet/developer-account
+slug: developer-account
 ---
 
 ## Quick steps
@@ -14,7 +14,7 @@ slug: fleet/developer-account
 
 ## Set up the Supervaize CLI
 
-First, create a Supervaize account or sign-in at [supervaize.com](supervaize.com)
+First, create a Supervaize account or sign-in at [supervaize.com](https://supervaize.com)
 
 ## Getting started on Supervaize {#getting_started}
 
