--- a/docs/supervaizer-controller/controller-setup.mdx
+++ b/docs/supervaizer-controller/controller-setup.mdx
@@ -2,7 +2,7 @@
 id: controller-setup
 title: Controller Setup Guide
 displayed_sidebar: supervaizerControllerSidebar
-slug: /supervaizer/setup
+slug: controller-setup
 ---
 
 import Link from "@docusaurus/Link";
@@ -123,7 +123,7 @@ https://github.com/alain-sv/Email-AI-Agent/blob/supervaizer/supervaizer_email_ag
 This step is not needed to run the supervaizer as an A2A / ACP server only. See [Protocol support](/docs/supervaizer-controller/PROTOCOLS)
 :::
 
-[Create your developer account](/docs/fleet/setup-developmen-environment#getting_started) on the Supervaize platform.
+[Create your developer account](/docs/supervaize-fleet/developer-account#getting_started) on the Supervaize platform.
 
 Create your API Key and collect your environment variables.
 
