--- a/docs/supervaizer-controller/quickstart.mdx
+++ b/docs/supervaizer-controller/quickstart.mdx
@@ -2,7 +2,7 @@
 id: quickstart
 title: Supervaizer Controller — Quickstart
 displayed_sidebar: supervaizerControllerSidebar
-slug: /supervaizer/quickstart
+slug: quickstart
 ---
 
 import Tabs from "@theme/Tabs";
@@ -168,13 +168,13 @@ https://github.com/alain-sv/Email-AI-Agent/blob/supervaizer/supervaizer_email_ag
 
 ### Step by step
 
-For detailed instructions on customizing your controller, see the **[Controller Setup Guide](setup)**.
+For detailed instructions on customizing your controller, see the **[Controller Setup Guide](controller-setup)**.
 
 ## <i className="bi bi-4-circle"></i> Configure your supervaize account & environment {#4}
 
 ### Supervaize account and credentials
 
-[Create your developer account](/docs/fleet/setup-development-environment#getting_started) on the Supervaize platform.
+[Create your developer account](/docs/supervaize-fleet/developer-account#getting_started) on the Supervaize platform.
 
 Create your API Key and collect your environment variables.
 
