Add Tunneling Setup documentation and update sidebar
- Added a new document for Tunneling Setup to the sidebar.
- Updated controller setup documentation with a warning about the A2A protocol activation when `supervaizor_account` is provided.
- Revised quickstart instructions to include local development tunneling requirements and environment variable setup.
- Updated version numbers in model reference files to 0.9.7 and adjusted timestamps across various documentation files.

--- a/docs/supervaizer-controller/controller-setup.mdx
+++ b/docs/supervaizer-controller/controller-setup.mdx
@@ -149,6 +149,10 @@ At the minimum, the server requires at least one agent to be defined and the sup
 https://github.com/alain-sv/Email-AI-Agent/blob/supervaizer/supervaizer_control.py#L174-L181
 ```
 
+:::warning Important
+Note that if `supervaizor_account` is provided, the A2A protocol is automatically activated
+:::
+
 **📖 See the model reference**
 
 [Server Documentation](/docs/supervaizer-controller/model_reference/model_core#serverserverabstract)
