Add features section to sidebar and update troubleshooting command
- Added a new "Features" category to the sidebar with detailed documentation links for Agent Management, Mission Management, Context Management, Job Management, Case Management, Rating & Analytics, and Slack Notifications.
- Updated troubleshooting documentation to clarify the command for starting the supervaizer and ensured the virtual environment is active.

--- a/docs/supervaizer-controller/troubleshooting.mdx
+++ b/docs/supervaizer-controller/troubleshooting.mdx
@@ -11,13 +11,9 @@ Common issues and solutions when setting up and running the Supervaizer Controll
 
 ## Server Launch Issues
 
-### **supervaizer start** stops after launch
+### **Unknown command: supervaizer **
 
-Debug using direct python start.
-
-```bash
-uv run python supervaizer_control.py
-```
+Make sure you virtual environment is active.
 
 ### **Error sending event SERVER_REGISTER**
 
