Add Cloud Deployment Guide and update sidebar
- Introduced a new document for the Cloud Deployment Guide, detailing automated deployment processes for Supervaizer agents across major cloud platforms.
- Updated the sidebar to include a link to the new Cloud Deployment Guide, enhancing navigation for users.
- Made minor adjustments to the quickstart documentation to reference the new deployment guide for cloud hosting options.

--- a/docs/supervaizer-controller/quickstart.mdx
+++ b/docs/supervaizer-controller/quickstart.mdx
@@ -275,11 +275,12 @@ Once the server is running, you'll have:
 
 ---
 
-## What’s next?
+## What's next?
 
-- Add more **custom methods** (`chat`, `custom`) to extend control.
-- Turn on **A2A / ACP** discovery for interoperability.
-- Hook your controller into Supervaize to **monitor, audit, and operate** the agent.
+- **Deploy to the cloud** using the [Cloud Deployment Guide](deploy) for production-ready hosting
+- Add more **custom methods** (`chat`, `custom`) to extend control
+- Turn on **A2A / ACP** discovery for interoperability
+- Hook your controller into Supervaize to **monitor, audit, and operate** the agent
 
 ## Need Help?
 
