Update copyright notice and enhance documentation structure
- Modified the copyright notice in docusaurus.config.ts to include a timestamp and additional formatting.
- Added a new document link for "Application Flow Control" in the sidebar for improved navigation.
- Corrected a typo in the controller setup documentation, changing `supervaizor_account` to `supervisor_account`.
- Updated the controller setup documentation to include a reference to the new "Application Flow Control" section.

--- a/docs/supervaizer-controller/controller-setup.mdx
+++ b/docs/supervaizer-controller/controller-setup.mdx
@@ -150,7 +150,7 @@ https://github.com/alain-sv/Email-AI-Agent/blob/supervaizer/supervaizer_control.
 ```
 
 :::warning Important
-Note that if `supervaizor_account` is provided, the A2A protocol is automatically activated
+Note that if `supervisor_account` is provided, the A2A protocol is automatically activated
 :::
 
 **📖 See the model reference**
@@ -167,6 +167,7 @@ See [Server Start 🚀](/docs/supervaizer-controller/quickstart#start) for CLI i
 
 ## What's next?
 
+- Learn about [Application Flow Control](application-flow-control) to manage cases, track progress, and handle human input
 - Return to the [Quickstart](/docs/supervaizer-controller/quickstart) to continue with configuration and deployment
 - Check the [Model Reference](/docs/supervaizer-controller/model_reference/model_core) for detailed field specifications
 - Explore [API Reference](/docs/supervaizer-controller/ref/API_REFERENCE) for advanced usage
